# call_agent

./: .dockerignore  .env  .env.defaults  .gitignore  Dockerfile  README.md  call_agent.py  call_development copy.py  call_development.py  call_development1.py  chat_agent.py  chat_development.py  config.yaml  dashboard.py  logging_config.py  orchestrator.py  pyproject.toml  test.py  test.sh  test_redis_cuncurrenct_chat.py  utils.py  vexu_analysis.md  voice_development.py  web_ui.py
.github/workflows/: docker-dev.yml
benchmarks/: chat_cuncurrent_benchmark.py  chat_memory_benchmark.py
call_benchmarks/: benchmark_config.py  benchmark_runner.py  metrics_collector.py  system_optimizer.py  user_simulator.py
chat_benchmarks/: agent_benchmark.py  cuncurrent_benchmark.py  memory_benchmark.py
config/: config.yaml  config1.yaml  config2.yaml
llm/: model.py  test.py
static/: chat.html  index.html
